# t5_fretting_transformer

./: .gitignore  README.md  evaluate.py  postprocess_best_model.py  postprocess_best_model_backup.py  postprocess_predictions.py  pyproject.toml  retrain_synthtab_corrected.py  retrain_synthtab_no_conditioning.py  test_best_model.py  test_on_real_data.py  train.py  train_dadagp.py  train_guitarset.py
scripts/: dadagp_extractor.py  dadagp_filters.py  dadagp_manifest.py  dadagp_pipeline.py  dadagp_to_jams.py  guitarset_loader.py  guitarset_loader_inverted.py
src/fret_t5/: __init__.py  collators.py  constrained_generation.py  constraints.py  data.py  hf_tokenizer.py  inference.py  loaders.py  metrics.py  postprocess.py  tokenization.py  training.py
universal_tokenizer/: tokenizer.json
